[gd_scene load_steps=9 format=2]

[ext_resource path="res://Reusable/Enemies/boss/boss.gd" type="Script" id=1]
[ext_resource path="res://Reusable/Enemies/boss/boss1.png" type="Texture" id=2]
[ext_resource path="res://Reusable/Enemies/boss/boss2.png" type="Texture" id=3]
[ext_resource path="res://Reusable/Enemies/boss/boss4.png" type="Texture" id=4]
[ext_resource path="res://Reusable/Enemies/boss/boss3.png" type="Texture" id=5]
[ext_resource path="res://Reusable/Enemies/boss/boss5.png" type="Texture" id=6]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "Missles",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "Alerted",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "Lasers",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 48.8323, 37.6743 )

[node name="Boss" type="StaticBody2D" index="0"]

input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="0"]

scale = Vector2( 1.5, 1.5 )
frames = SubResource( 1 )
animation = "default"
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="IdleTimer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 1.5
one_shot = true
autostart = false

[node name="AlertedTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="Attack" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 7.0
one_shot = false
autostart = false

[node name="ShootTimer" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[connection signal="timeout" from="IdleTimer" to="." method="_on_IdleTimer_timeout"]

[connection signal="timeout" from="AlertedTimer" to="." method="_on_AlertedTimer_timeout"]


